<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Run Stats Tracker</string>
    <string name="settings">Settings</string>
    <string name="export_list_of_runs">Export list of runs</string>
    <string name="restore_list_of_runs">Restore list of runs</string>
    <string name="delete_db">Delete all runs</string>
    <string name="statistics">Statistics</string>
    <string name="stats">Stats</string>
    <string name="graph_it">Graph</string>

    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="limit">limit</string>
    <string name="unit">unit</string>
    <string name="distance">distance</string>
    <string name="speed">speed</string>
    <string name="distance_cap">Distance</string>
    <string name="speed_cap">Speed</string>
    <string name="distance_colon">Distance: </string>
    <string name="speed_colon">Speed: </string>

    <string name="no_runs">No runs to chart yet</string>
    <string name="last_runs">Last %d workouts</string>
    <string name="get_some_first">Get some running first!</string>

    <string name="stats_since">"Since %1$s ( %2$d workouts)"</string>
    <string name="stats_avg_distance">"Average: %1$s %2$s"</string>
    <string name="stats_longest_distance">"Longest: %1$s %2$s"</string>
    <string name="stats_total_distance">"Total: %1$s %2$s"</string>
    <string name="stats_avg_pace_and_speed">"Average: %1$s %2$s (%3$s %4$s)"</string>
    <string name="stats_max_pace_and_speed">"Fastest: %1$s %2$s (%3$s %4$s)"</string>
    <string name="stats_average_overall">"Your average is %1$s miles weekly.\nThat's %2$s miles daily.\n\nYou run every %3$s days."</string>
    <string name="stats_not_yet">"No stats to display yet"</string>

    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update_run">Update Run</string>
    <string name="delete_run">Delete Run</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="delete_message">"This will remove all run records and cannot be undone.\n\nYou might need to grant permission to safely back up your current list in the Download folder"</string>
    <string name="choose_unit">Choose unit of distance</string>
    <string name="choose_message">"Do you want to enter distance in miles or kilometers"</string>
    <string name="new_runs_in_toast">"New runs will be entered in %s"</string>
    <string name="update_details">"Update details of %s's run"</string>
    <string name="workouts_after">"Workouts after %s will be recorded"</string>
    <string name="last_workouts">"Last %s workouts will be recorded""</string>

    <string name="cant_read">Cant read</string>
    <string name="cant_delete">Can\'t delete </string>
    <string name="cant_be_saved"> can\'t be saved :(</string>
    <string name="sd_card_no_avail">SD Card is not available</string>
    <string name="backed_up">Backed up in the Downloads folder</string>
    <string name="file_write_error">File write error</string>
    <string name="csv_does_not_exist">RunTracker-runlist.csv file does not exist</string>
    <string name="email_not_sent">Email is not sent</string>
    <string name="email_title">RunTracker runlist for Excel</string>
    <string name="email_header">RunTracker-runlist.csv is attached.</string>
    <string name="email_body">"RunTracker-runlist.csv is attached.\n\nThe file can be opened with any spreadsheet application, like MS Excel, or with a simple text editor"</string>
    <string name="skip_backup">Skipping backup to SD Card</string>
    <string name="skip_restore">Skipping restore, permission needed</string>
    <string name="restore_from_sd">Restore from SD Card</string>
    <string name="restore_message">"You need to have a previously backed up RunTracker-runlist.csv file in your Download directory. \n\nThis file will overwrite your current app data.\n\nAre you sure you want to go ahead?"</string>
    <string name="restore_yes">"Yes, restore"</string>

    <string name="save_from_on">Save workouts from this date on</string>
    <string name="distance_average">Distance average</string>
    <string name="distance_max">Distance maximum</string>
    <string name="distance_total">Distance total</string>
    <string name="pace_speed">Pace and Speed</string>
    <string name="pace_speed_avg">Pace and speed average</string>
    <string name="pace_speed_max">Pace and speed maximum</string>
    <string name="performance_distance">%s of average distance,  </string>
    <string name="performance_speed">%s of average speed</string>
    <string name="showing_since">Showing %1$d workouts since %2$s</string>
    <string name="showing_of">"Showing %1$d of %2$s workouts"</string>
    <string name="empty_list">Empty list</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="cant_read_">Can\'t read %s</string>
    <string name="cant_delete_">Can\'t delete  %s</string>
    <string name="time_colon">Time: </string>
    <string name="how_many_to_save">How many workouts to save:</string>
    <string name="please_select_unit">Please select the distance unit of your workouts</string>
    <string name="or_starting_date">Or starting this date:</string>
    <string name="pick_date">Pick a date...</string>
    <string name="info">info</string>
    <string name="perform_score">PerformScore: </string>
    <string name="performance">performance</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="pace">pace</string>
    <string name="my_time">My Time</string>
    <string name="yesterday">"Yesterday"</string>
    <string name="yesterday_">"Yesterday  "</string>
    <string name="today_">"Today  "</string>
    <string name="tomorrow_">Tomorrow </string>
    <string name="date_">"Date…  "</string>
    <string name="enter_run">Enter Run</string>
    <string name="your_average">your average</string>
    <string name="done">Done</string>

</resources>
