<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/settings_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:textSize="17sp"
        android:text="@string/please_select_unit" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/settings_miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:textSize="16sp"
            android:text="@string/miles" />

        <RadioButton
            android:id="@+id/settings_kilometers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/kilometers" />
    </RadioGroup>
    
    <View
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#33b5e5" />

    <TextView
        android:id="@+id/settings_how_many_to_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:textSize="17sp"
        android:text="@string/how_many_to_save" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <RadioButton
	        android:id="@+id/settings_100"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="6dp"
            android:textSize="16sp"
	        android:text="100" />
	
	    <RadioButton
	        android:id="@+id/settings_300"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="6dp"
            android:textSize="16sp"
	        android:text="300" />
	
	    <RadioButton
	        android:id="@+id/settings_500"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:textSize="16sp"
	        android:text="500" />
	</RadioGroup> 
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textSize="17sp"
        android:text="@string/or_starting_date" />

    <RadioButton
        android:id="@+id/settings_starting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/pick_date" />
    
</LinearLayout>
</ScrollView>