<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    card_view:cardCornerRadius="0dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_light"
        android:orientation="vertical">
    
        <!-- TOP MAIN LINE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center" >

            <TextView android:id="@+id/run_date"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:textSize="12sp"
                android:textStyle="italic|bold" />
            <TextView android:id="@+id/run_dist"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView android:id="@+id/run_time"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:textStyle="bold"  />
            <TextView android:id="@+id/run_pace"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="35"
                android:gravity="center_vertical|right"
                android:paddingRight="12dp"
                android:textSize="12sp"
                android:textStyle="bold"  />

        </LinearLayout>

        <!-- DETAILS -->
        <!-- second line -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp" >

            <TextView android:id="@+id/perf_score"
                android:text="@string/perform_score"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="12sp" />
            <TextView android:id="@+id/perform_score"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/perf_score"
                android:textSize="12sp" />
            <TextView android:id="@+id/speed"
                android:text="@string/speed_colon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="50dp"
                android:textSize="12sp"
                android:layout_centerHorizontal="true" />
            <TextView android:id="@+id/run_speed"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/speed"
                android:layout_gravity="right"
                android:paddingRight="25dp"
                android:textSize="12sp" />

        </RelativeLayout>

        <!-- third line -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView android:id="@+id/perf_dist"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="12sp"
                android:text="@string/performance"/>
            <TextView android:id="@+id/perf_pace"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/perf_dist"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/run_edit"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="5dp"
        android:background="@drawable/edit" />

</android.support.v7.widget.CardView>
